--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "area-polygon": "^1.0.1",
     "convert-units": "^2.3.4",
     "immutable": "^5.0.3",
+    "immutable-devtools": "^0.1.4",
     "immutablediff": "^0.4.4",
     "immutablepatch": "^0.5.0",
     "polylabel": "^2.0.1",
